src/test/deca/context/invalid/obtained_res/doubleDefFieldcont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:45) - verify program: Pass 1 end
./src/test/deca/context/invalid/created/testPass2/doubleDefField.deca:10:10: DoubleFieldDeclarationException: The field couldn't be declared because it has already been defined.
